[package]
name = "raftify"
version = "0.1.0"
authors = ["Anton Bornev <sargarass@phystech.edu>"]
edition = "2018"

[dependencies]
slog = "2.2"
prost = "0.7"
raft = { version = "0.6.0", features = ["prost-codec"], default-features = false }
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
slog-term = { version = "2.8.0"}
slog-async = "2.7.0"
regex = "1.5.4"

[[example]]
name = "example"
path = "example/example.rs"